{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 559,
  "lineage": "a0fe943c-dea7-eb32-d8c7-04dc58eb4af4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_subnet_routed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e05bdb6461657a86",
            "domain": "vpc",
            "id": "eipalloc-03efe688642fb8870",
            "instance": "i-0e1c0e1645f4d9b6a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0a6e157c2eab88f98",
            "private_dns": "ip-172-16-1-76.eu-central-1.compute.internal",
            "private_ip": "172.16.1.76",
            "public_dns": "ec2-18-193-201-40.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.193.201.40",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my_webserver",
            "aws_security_group.web",
            "aws_subnet.routed",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_subnet_routed-stuff",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0687d60a50f359aad",
            "domain": "vpc",
            "id": "eipalloc-0d94a7f36c17e7944",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0c634074e3d5bca7e",
            "private_dns": "ip-172-16-2-201.eu-central-1.compute.internal",
            "private_ip": "172.16.2.201",
            "public_dns": "ec2-18-192-102-243.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.102.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-057b20e0ecf3e488a",
            "domain": "vpc",
            "id": "eipalloc-0cd546d501f018b97",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-038de80ee1bfe8ff0",
            "private_dns": "ip-172-16-12-54.eu-central-1.compute.internal",
            "private_ip": "172.16.12.54",
            "public_dns": "ec2-18-198-94-186.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.94.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e81269cb2beb3b82",
            "domain": "vpc",
            "id": "eipalloc-0872b237db413e7e3",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-016843d6737fdacb9",
            "private_dns": "ip-172-16-22-66.eu-central-1.compute.internal",
            "private_ip": "172.16.22.66",
            "public_dns": "ec2-18-159-116-124.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.116.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:556789602792:loadbalancer/ELB-web-cluster-1",
            "availability_zones": [
              "eu-central-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "ELB-web-cluster-1-344484683.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "ELB-web-cluster-1",
            "idle_timeout": 60,
            "instances": [
              "i-0197439dc412c2bcb",
              "i-05bd9c33a514460a7"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "ELB-web-cluster-1",
            "security_groups": [
              "sg-035cba8cac3c49258"
            ],
            "source_security_group": "556789602792/WebServer Security Group",
            "source_security_group_id": "sg-035cba8cac3c49258",
            "subnets": [
              "subnet-0f736fc3d6a7814ca"
            ],
            "tags": {
              "Name": "Test"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.routed"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:556789602792:loadbalancer/ELB-web-cluster-2",
            "availability_zones": [
              "eu-central-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "ELB-web-cluster-2-1404844862.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "ELB-web-cluster-2",
            "idle_timeout": 60,
            "instances": [
              "i-0012a6cd5e9ca2cb8",
              "i-091d100364304a40d"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "ELB-web-cluster-2",
            "security_groups": [
              "sg-035cba8cac3c49258"
            ],
            "source_security_group": "556789602792/WebServer Security Group",
            "source_security_group_id": "sg-035cba8cac3c49258",
            "subnets": [
              "subnet-0b3083d5728e5404e"
            ],
            "tags": {
              "Name": "Test"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.routed"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:556789602792:loadbalancer/ELB-web-cluster-3",
            "availability_zones": [
              "eu-central-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "ELB-web-cluster-3-1294424281.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "ELB-web-cluster-3",
            "idle_timeout": 60,
            "instances": [
              "i-02d24f8c322d07499",
              "i-0691b214e8b211821"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "ELB-web-cluster-3",
            "security_groups": [
              "sg-035cba8cac3c49258"
            ],
            "source_security_group": "556789602792/WebServer Security Group",
            "source_security_group_id": "sg-035cba8cac3c49258",
            "subnets": [
              "subnet-0f430621bc61e93c3"
            ],
            "tags": {
              "Name": "Test"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.routed"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a4a23815cdb5e06",
            "arn": "arn:aws:ec2:eu-central-1:556789602792:instance/i-0e1c0e1645f4d9b6a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1c0e1645f4d9b6a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6e157c2eab88f98",
            "private_dns": "ip-172-16-1-76.eu-central-1.compute.internal",
            "private_ip": "172.16.1.76",
            "public_ip": "18.193.201.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-015377336eba2469f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f736fc3d6a7814ca",
            "tags": {
              "Name": "test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-035cba8cac3c49258"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.routed",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:internet-gateway/igw-04fa097d4944c8dad",
            "id": "igw-04fa097d4944c8dad",
            "owner_id": "556789602792",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d94a7f36c17e7944",
            "id": "nat-03c33af20e3bf0062",
            "network_interface_id": "eni-0c634074e3d5bca7e",
            "private_ip": "172.16.2.201",
            "public_ip": "18.192.102.243",
            "subnet_id": "subnet-03ebbade6e9cc9932",
            "tags": {
              "Name": "test"
            }
          },
          "dependencies": [
            "aws_eip.eip_subnet_routed-stuff",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd546d501f018b97",
            "id": "nat-0a25687ed1eddea6f",
            "network_interface_id": "eni-038de80ee1bfe8ff0",
            "private_ip": "172.16.12.54",
            "public_ip": "18.198.94.186",
            "subnet_id": "subnet-0ff387db3e9f22316",
            "tags": {
              "Name": "test"
            }
          },
          "dependencies": [
            "aws_eip.eip_subnet_routed-stuff",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0872b237db413e7e3",
            "id": "nat-07d3c795c1f9eda15",
            "network_interface_id": "eni-016843d6737fdacb9",
            "private_ip": "172.16.22.66",
            "public_ip": "18.159.116.124",
            "subnet_id": "subnet-05886c3cdab416f7b",
            "tags": {
              "Name": "test"
            }
          },
          "dependencies": [
            "aws_eip.eip_subnet_routed-stuff",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_natted",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01453141bde52312b",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03c33af20e3bf0062",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_eip.eip_subnet_routed-stuff",
            "aws_nat_gateway.gw",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e249ce30d7d55125",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a25687ed1eddea6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_eip.eip_subnet_routed-stuff",
            "aws_nat_gateway.gw",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038dbfe19a2790d8b",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d3c795c1f9eda15",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_eip.eip_subnet_routed-stuff",
            "aws_nat_gateway.gw",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_routed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09b85ff65b15a8ea7",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fa097d4944c8dad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_stuff",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b3b53f2479c46495",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_stuff"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_stuff-routed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0812135ee2a03795f",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fa097d4944c8dad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natted",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8e36f5ce9c4cc85",
            "route_table_id": "rtb-01453141bde52312b",
            "subnet_id": "subnet-042f7ac7d9f25a917"
          },
          "dependencies": [
            "aws_eip.eip_subnet_routed-stuff",
            "aws_nat_gateway.gw",
            "aws_route_table.rt_natted",
            "aws_subnet.natted",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013d39caf21f8f298",
            "route_table_id": "rtb-0e249ce30d7d55125",
            "subnet_id": "subnet-0dc83a613cf2d59bc"
          },
          "dependencies": [
            "aws_eip.eip_subnet_routed-stuff",
            "aws_nat_gateway.gw",
            "aws_route_table.rt_natted",
            "aws_subnet.natted",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042765bbb77514259",
            "route_table_id": "rtb-038dbfe19a2790d8b",
            "subnet_id": "subnet-0780874ce4601248d"
          },
          "dependencies": [
            "aws_eip.eip_subnet_routed-stuff",
            "aws_nat_gateway.gw",
            "aws_route_table.rt_natted",
            "aws_subnet.natted",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routed",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013b13568bfb121e2",
            "route_table_id": "rtb-09b85ff65b15a8ea7",
            "subnet_id": "subnet-0f736fc3d6a7814ca"
          },
          "dependencies": [
            "aws_route_table.rt_routed",
            "aws_subnet.routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041a58ab99d95fc64",
            "route_table_id": "rtb-09b85ff65b15a8ea7",
            "subnet_id": "subnet-0b3083d5728e5404e"
          },
          "dependencies": [
            "aws_route_table.rt_routed",
            "aws_subnet.routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00543c76e2eda225f",
            "route_table_id": "rtb-09b85ff65b15a8ea7",
            "subnet_id": "subnet-0f430621bc61e93c3"
          },
          "dependencies": [
            "aws_route_table.rt_routed",
            "aws_subnet.routed",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stuff",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016389bb4dcc3d9d6",
            "route_table_id": "rtb-0b3b53f2479c46495",
            "subnet_id": "subnet-076536899b6213f7c"
          },
          "dependencies": [
            "aws_route_table.rt_stuff",
            "aws_subnet.stuff",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f9175599d7b929c",
            "route_table_id": "rtb-0b3b53f2479c46495",
            "subnet_id": "subnet-006850208dc2cfea2"
          },
          "dependencies": [
            "aws_route_table.rt_stuff",
            "aws_subnet.stuff",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abdf9e8f3414a6cf",
            "route_table_id": "rtb-0b3b53f2479c46495",
            "subnet_id": "subnet-09fd422e9803566c6"
          },
          "dependencies": [
            "aws_route_table.rt_stuff",
            "aws_subnet.stuff",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stuff-routed",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2aa744f6bbf5373",
            "route_table_id": "rtb-0812135ee2a03795f",
            "subnet_id": "subnet-03ebbade6e9cc9932"
          },
          "dependencies": [
            "aws_route_table.rt_stuff-routed",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f313a81bfde13251",
            "route_table_id": "rtb-0812135ee2a03795f",
            "subnet_id": "subnet-0ff387db3e9f22316"
          },
          "dependencies": [
            "aws_route_table.rt_stuff-routed",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe5608af44e65963",
            "route_table_id": "rtb-0812135ee2a03795f",
            "subnet_id": "subnet-05886c3cdab416f7b"
          },
          "dependencies": [
            "aws_route_table.rt_stuff-routed",
            "aws_subnet.stuff-routed",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:security-group/sg-035cba8cac3c49258",
            "description": "SecurityGroup for webservers 22, 80 and 443 open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035cba8cac3c49258",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServer Security Group",
            "name_prefix": "",
            "owner_id": "556789602792",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "natted",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-042f7ac7d9f25a917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-042f7ac7d9f25a917",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "Main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-0dc83a613cf2d59bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-0dc83a613cf2d59bc",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "Main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-0780874ce4601248d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.20.0/24",
            "id": "subnet-0780874ce4601248d",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "Main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "routed",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-0f736fc3d6a7814ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0f736fc3d6a7814ca",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "Main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-0b3083d5728e5404e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.11.0/24",
            "id": "subnet-0b3083d5728e5404e",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "Main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-0f430621bc61e93c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.21.0/24",
            "id": "subnet-0f430621bc61e93c3",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "Main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stuff",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-076536899b6213f7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-076536899b6213f7c",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "subnet rt_stuff"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-006850208dc2cfea2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.13.0/24",
            "id": "subnet-006850208dc2cfea2",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "subnet rt_stuff"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-09fd422e9803566c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.23.0/24",
            "id": "subnet-09fd422e9803566c6",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "subnet rt_stuff"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stuff-routed",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-03ebbade6e9cc9932",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-03ebbade6e9cc9932",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-0ff387db3e9f22316",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.12.0/24",
            "id": "subnet-0ff387db3e9f22316",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-05886c3cdab416f7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.16.22.0/24",
            "id": "subnet-05886c3cdab416f7b",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0c05409dee3ede86e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:vpc/vpc-0c05409dee3ede86e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a3b8678d80adf095",
            "default_route_table_id": "rtb-067c5b69eded4ca6a",
            "default_security_group_id": "sg-0b7141f53d1bdf0c1",
            "dhcp_options_id": "dopt-118f337b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c05409dee3ede86e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-067c5b69eded4ca6a",
            "owner_id": "556789602792",
            "tags": {
              "Env": "testing",
              "Name": "Main"
            }
          }
        }
      ]
    }
  ]
}